--- a/basic_framework.ioc
+++ b/basic_framework.ioc
@@ -479,24 +479,18 @@ PH0-OSC_IN.Mode=HSE-External-Oscillator
 PH0-OSC_IN.Signal=RCC_OSC_IN
 PH1-OSC_OUT.Mode=HSE-External-Oscillator
 PH1-OSC_OUT.Signal=RCC_OSC_OUT
-PH10.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
-PH10.GPIO_Label=LED_B
-PH10.GPIO_PuPd=GPIO_PULLUP
-PH10.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PH10.GPIOParameters=GPIO_PuPd
+PH10.GPIO_PuPd=GPIO_PULLDOWN
 PH10.Locked=true
-PH10.Signal=S_TIM5_CH1
-PH11.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
-PH11.GPIO_Label=LED_G
-PH11.GPIO_PuPd=GPIO_PULLUP
-PH11.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PH10.Signal=GPIO_Output
+PH11.GPIOParameters=GPIO_PuPd
+PH11.GPIO_PuPd=GPIO_PULLDOWN
 PH11.Locked=true
-PH11.Signal=S_TIM5_CH2
-PH12.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
-PH12.GPIO_Label=LED_R
-PH12.GPIO_PuPd=GPIO_PULLUP
-PH12.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PH11.Signal=GPIO_Output
+PH12.GPIOParameters=GPIO_PuPd
+PH12.GPIO_PuPd=GPIO_PULLDOWN
 PH12.Locked=true
-PH12.Signal=S_TIM5_CH3
+PH12.Signal=GPIO_Output
 PI6.Signal=S_TIM8_CH2
 PI7.Signal=S_TIM8_CH3
 PinOutPanel.CurrentBGAView=Top
@@ -590,12 +584,6 @@ SH.S_TIM1_CH4.0=TIM1_CH4,PWM Generation4 CH4
 SH.S_TIM1_CH4.ConfNb=1
 SH.S_TIM4_CH3.0=TIM4_CH3,PWM Generation3 CH3
 SH.S_TIM4_CH3.ConfNb=1
-SH.S_TIM5_CH1.0=TIM5_CH1,PWM Generation1 CH1
-SH.S_TIM5_CH1.ConfNb=1
-SH.S_TIM5_CH2.0=TIM5_CH2,PWM Generation2 CH2
-SH.S_TIM5_CH2.ConfNb=1
-SH.S_TIM5_CH3.0=TIM5_CH3,PWM Generation3 CH3
-SH.S_TIM5_CH3.ConfNb=1
 SH.S_TIM8_CH1.0=TIM8_CH1,Output Compare1 CH1
 SH.S_TIM8_CH1.ConfNb=1
 SH.S_TIM8_CH2.0=TIM8_CH2,Output Compare2 CH2
@@ -637,10 +625,7 @@ TIM4.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM4.IPParameters=Channel-PWM Generation3 CH3,Prescaler,Period
 TIM4.Period=65535
 TIM4.Prescaler=167
-TIM5.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM5.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
-TIM5.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
-TIM5.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Prescaler,Period
+TIM5.IPParameters=Prescaler,Period
 TIM5.Period=65535
 TIM5.Prescaler=0
 TIM6.IPParameters=Prescaler,Period
